--- a/ProfileScorer_Demo.ipynb
+++ b/ProfileScorer_Demo.ipynb
@@ -47,7 +47,7 @@
       "cell_type": "markdown",
       "source": [
         "# Single Profile Scorer\n",
-        "Run the cell below and enter Uniprot ID or the Gene name, and follow the instructions. (Example name  - P25705)"
+        "Run the cell below and enter Uniprot ID or the Gene name, and follow the instructions. (Example name  - **P25705**)"
       ],
       "metadata": {
         "id": "6-bOxqH9Kw0Z"
@@ -151,7 +151,7 @@
       "cell_type": "markdown",
       "source": [
         "# Complex Verifier - Compare Multiple Profiles\n",
-        "Run the cell below and enter Uniprot IDs or the Gene names from a complex, and follow the instructions. (Example ATPase_hu complex - P25705, P06576, P36542, P30049, P56385, P56385, O75964, Q9UII2, P00846, P03928, Q96IX5, P24539, O75947, P48047)"
+        "Run the cell below and enter Uniprot IDs or the Gene names from a complex, and follow the instructions. (Example ATPase_hu complex - **P25705, P06576, P36542, P30049, P56385, P56385, O75964, Q9UII2, P00846, P03928, Q96IX5, P24539, O75947, P48047**)"
       ],
       "metadata": {
         "id": "4cRYDKGXK_6h"
